Implemented SCSS for CSS organization and maintainability

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="sass/main.css" />
 
     <title>Frontend Mentor | FAQ accordion</title>
   </head>
