Updated UI to match the design specifications

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="../images/favicon-32x32.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,22 +25,18 @@
   </head>
   <body>
     <main class="accordion">
-      <div class="heading">
-        <img src="assets/images/icon-star.svg" class="star" alt="star icon" />
-        <h1>FAQs</h1>
+      <div class="accordion__heading">
+        <img src="../images/icon-star.svg" class="star" alt="star icon" />
+        <h1 class="accordion__title">FAQs</h1>
       </div>
       <div class="item-container">
         <div class="item open">
-          <p class="question">
+          <p class="item__question">
             What is Frontend Mentor, and how will it help me?
           </p>
-          <img
-            src="assets/images/icon-minus.svg"
-            class="icons"
-            alt="minus icon"
-          />
+          <img src="../images/icon-minus.svg" class="icons" alt="minus icon" />
           <div class="hidden-box">
-            <p>
+            <p class="item__answer">
               Frontend Mentor offers realistic coding challenges to help
               developers improve their frontend coding skills with projects in
               HTML, CSS, and JavaScript. It's suitable for all levels and ideal
@@ -48,52 +44,46 @@
             </p>
           </div>
         </div>
+
         <div class="separator" role="separator"></div>
+
         <div class="item">
-          <p class="question">Is Frontend Mentor free?</p>
-          <img
-            src="assets/images/icon-plus.svg"
-            class="icons"
-            alt="plus icon"
-          />
+          <p class="item__question">Is Frontend Mentor free?</p>
+          <img src="../images/icon-plus.svg" class="icons" alt="plus icon" />
           <div class="hidden-box">
-            <p>
+            <p class="item__answer">
               Yes, Frontend Mentor offers both free and premium coding
               challenges, with the free option providing access to a range of
               projects suitable for all skill levels.
             </p>
           </div>
         </div>
+
         <div class="separator" role="separator"></div>
+
         <div class="item">
-          <p class="question">
+          <p class="item__question">
             Can I use Frontend Mentor projects in my portfolio?
           </p>
-          <img
-            src="assets/images/icon-plus.svg"
-            class="icons"
-            alt="plus icon"
-          />
+          <img src="../images/icon-plus.svg" class="icons" alt="plus icon" />
           <div class="hidden-box">
-            <p>
+            <p class="item__answer">
               Yes, you can use projects completed on Frontend Mentor in your
               portfolio. It's an excellent way to showcase your skills to
               potential employers!
             </p>
           </div>
         </div>
+
         <div class="separator" role="separator"></div>
+
         <div class="item">
-          <p class="question">
+          <p class="item__question">
             How can I get help if I'm stuck on a challenge?
           </p>
-          <img
-            src="assets/images/icon-plus.svg"
-            class="icons"
-            alt="plus icon"
-          />
+          <img src="../images/icon-plus.svg" class="icons" alt="plus icon" />
           <div class="hidden-box">
-            <p>
+            <p class="item__answer">
               The best place to get help is inside Frontend Mentor's Discord
               community. There's a help channel where you can ask questions and
               seek support from other community members.
