--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
       </div>
     </main>
 
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/stautuan">Stacy</a>.
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
