--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
   <body>
     <main class="accordion">
       <div class="accordion__heading">
-        <img src="../images/icon-star.svg" class="star" alt="star icon" />
+        <img
+          src="../images/icon-star.svg"
+          class="accordion__icon"
+          alt="star icon"
+        />
         <h1 class="accordion__title">FAQs</h1>
       </div>
       <div class="item-container">
@@ -34,7 +38,11 @@
           <p class="item__question">
             What is Frontend Mentor, and how will it help me?
           </p>
-          <img src="../images/icon-minus.svg" class="icons" alt="minus icon" />
+          <img
+            src="../images/icon-minus.svg"
+            class="item__icons"
+            alt="minus icon"
+          />
           <div class="hidden-box">
             <p class="item__answer">
               Frontend Mentor offers realistic coding challenges to help
@@ -49,7 +57,11 @@
 
         <div class="item">
           <p class="item__question">Is Frontend Mentor free?</p>
-          <img src="../images/icon-plus.svg" class="icons" alt="plus icon" />
+          <img
+            src="../images/icon-plus.svg"
+            class="item__icons"
+            alt="plus icon"
+          />
           <div class="hidden-box">
             <p class="item__answer">
               Yes, Frontend Mentor offers both free and premium coding
@@ -65,7 +77,11 @@
           <p class="item__question">
             Can I use Frontend Mentor projects in my portfolio?
           </p>
-          <img src="../images/icon-plus.svg" class="icons" alt="plus icon" />
+          <img
+            src="../images/icon-plus.svg"
+            class="item__icons"
+            alt="plus icon"
+          />
           <div class="hidden-box">
             <p class="item__answer">
               Yes, you can use projects completed on Frontend Mentor in your
@@ -81,7 +97,11 @@
           <p class="item__question">
             How can I get help if I'm stuck on a challenge?
           </p>
-          <img src="../images/icon-plus.svg" class="icons" alt="plus icon" />
+          <img
+            src="../images/icon-plus.svg"
+            class="item__icons"
+            alt="plus icon"
+          />
           <div class="hidden-box">
             <p class="item__answer">
               The best place to get help is inside Frontend Mentor's Discord
